# portfolio-website

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  about.html  contacts.html  dprint.json  home.html  package.json  rustfmt.toml  styles.scss  tailwind.config.js
.cargo/: config.toml
.helix/: config.toml  languages.toml
css/: fonts.css  output.css  styles.css
e2e/: Cargo.toml
e2e/src/: main.rs
html/dark/: about.html  home.html
html/light/: about.html  home.html
js/: swipe.js  theme.js
website/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
website/blogs/: my_helix_setup_for_leptos.md
website/css/: input.css
website/gpg/: stephen_power.gpg
website/src/: main.rs
website/src/components/: blog_container.rs  contact_form.rs  device_mockups.rs  drawer.rs  hero.rs  mod.rs  navbar.rs  page.rs  project_card.rs
website/src/pages/: blog.rs  contact.rs  home.rs  mod.rs
